# homeassistant_hotkeys

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml  ico.rc
.github/workflows/: rust.yml
src/: main.rs
