[package]
name = "homeassistant_hotkeys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hass-rs = { version = "0.2", features = ["async-std-runtime"] }
mki = "0.2.1"
futures = "0.3"
async-std = "1.10.0"
once_cell = "1.9.0"
kalgan_config = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"